k8s/kind/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  # Envoy Gateway を Gateway 実装として利用する
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
